# idgen

./: Cargo.toml  README.md
.github/workflows/: cd.yml
src/: main.rs  util.rs
src/generators/: mod.rs  password.rs  rand.rs  snowflake.rs  uuid.rs  xid.rs
